first-realization-middle

--- a/src/test/resources/model-comparison.properties
+++ b/src/test/resources/model-comparison.properties
@@ -6,3 +6,4 @@ ChangeNameResponse=ChangeNameResponse:id=id,username=username,name=name,role=rol
 MakeDepositRequest=MakeDepositResponse:id=id
 MakeDepositResponse=MakeDepositResponse:id=id,balance=balance
 CreateAccountResponse=CreateAccountResponse:id=id,accountNumber=accountNumber,balance=balance
+# Format: RequestClass=ResponseClass:field1=field1Response,field2=field2Response
