--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -5,6 +5,10 @@ admin.username=admin
 admin.password=admin
 
 uiRemote=http://localhost:4444/wd/hub
+# UI base URL - can be IP address or hostname
+# If IP is 192.168.x.x, it will be automatically converted to host.docker.internal for browser containers
 uiBaseUrl=http://192.168.0.16:3000
+# Optional: Explicit URL for browser containers (overrides automatic conversion)
+# uiBaseUrlForBrowsers=http://host.docker.internal:3000
 browser=chrome
 browserSize=1920x1080
