--- a/src/test/resources/model-comparison.properties
+++ b/src/test/resources/model-comparison.properties
@@ -1,6 +1,7 @@
 # Format: RequestClass=ResponseClass:field1=field1Response,field2=field2Response
 
 CreateUserRequest=CreateUserResponse:username=username,role=role
+CreateUserRequest=ChangeNameResponse:username=username,role=role
 ChangeNameRequest=ChangeNameResponse:name=name
 ChangeNameResponse=ChangeNameResponse:id=id,username=username,name=name,role=role
 MakeDepositRequest=MakeDepositResponse:id=id
