--- a/src/test/java/resources/config.properties
+++ b/src/test/java/resources/config.properties
@@ -1,2 +1,10 @@
-server=http://localhost:4111
+apiBaseUrl=http://192.168.0.16:4111
 apiVersion=/api/v1/
+
+admin.username=admin
+admin.password=admin
+
+uiRemote=http://localhost:4444/wd/hub
+uiBaseUrl=http://192.168.0.16:3000
+browser=chrome
+browserSize=1920x1080
