--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -31,7 +31,9 @@ jobs: # аналог этапов
           cd infra && bash restart-docker.sh && cd ..
 
       - name: Run tests
-        run: ./mvnw clean test -q
+        run: |
+          chmod +x mvnw
+          ./mvnw clean test -q
         env:
           APIBASEURL: http://localhost:4111
           UIBASEURL: http://localhost:3000
