--- a/.github/workflows/build-and-push-docker.yml
+++ b/.github/workflows/build-and-push-docker.yml
@@ -27,6 +27,11 @@ jobs:
           distribution: 'corretto'
           java-version: '21'
 
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.9
+
       - name: Cache Maven repository
         uses: actions/cache@v4
         with:
@@ -36,9 +41,7 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build project with Maven
-        run: |
-          chmod +x mvnw
-          ./mvnw clean verify -DskipTests -q
+        run: mvn clean verify -DskipTests -q
         env:
           APIBASEURL: http://localhost:4111
           UIBASEURL: http://frontend
