--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,6 +17,11 @@ jobs: # аналог этапов
           distribution: 'corretto'
           java-version: '21'
 
+      - name: Setup Maven
+        uses: stCarolas/setup-maven@v5
+        with:
+          maven-version: 3.9.9
+
       - name: Cache Maven repository
         uses: actions/cache@v4
         with:
@@ -31,9 +36,7 @@ jobs: # аналог этапов
           cd infra && bash restart-docker.sh && cd ..
 
       - name: Run tests
-        run: |
-          chmod +x mvnw
-          ./mvnw clean test -q
+        run: mvn clean test -q
         env:
           APIBASEURL: http://localhost:4111
           UIBASEURL: http://localhost:3000
