--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,7 +36,7 @@ jobs: # аналог этапов
           cd infra && bash restart-docker.sh && cd ..
 
       - name: Run tests
-        run: mvn clean test -q
+        run: mvn clean test -P api -q
         env:
           APIBASEURL: http://localhost:4111
           UIBASEURL: http://localhost:3000
