--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -84,10 +84,12 @@ jobs: # аналог этапов
       - name: Quality gate - API coverage >= 50%
         if: always()
         run: |
-          if [ -f swagger-coverage-results.json ]; then
-            chmod +x scripts/check-api-coverage.sh
-            ./scripts/check-api-coverage.sh swagger-coverage-results.json 50
+          if [ ! -f swagger-coverage-results.json ]; then
+            echo "ERROR: swagger-coverage-results.json not found - Swagger Coverage did not run"
+            exit 1
           fi
+          chmod +x scripts/check-api-coverage.sh
+          ./scripts/check-api-coverage.sh swagger-coverage-results.json 50
 
       - name: Prepare test-report structure
         if: always()
