--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ allure-reports/
 
 ### IntelliJ IDEA ###
 .idea/modules.xml
+.idea/workspace.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
