--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@ target/
 .allure/
 allure-history/
 allure-reports/
+swagger-coverage-output/
+swagger-coverage-report.html
+swagger-coverage-results.json
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
